--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,41 @@
-
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
-  background-color: black;
-  color: gold;
+  background: #111;
+  color: #ffd700;
+  font-family: sans-serif;
 }
-.menu ul {
-  list-style-type: none;
-  padding: 0;
+.header {
+  text-align: center;
+  padding: 20px;
+  background-color: #000;
 }
-.menu > ul > li {
+.logo {
+  width: 100px;
+}
+.slogan {
+  font-size: 1.2em;
+  color: #ccc;
+}
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background: #222;
   padding: 10px;
-  border-bottom: 1px solid gold;
 }
-.menu li ul {
-  margin-left: 20px;
+.menu-item {
+  margin: 10px;
+  padding: 10px;
+  background: #333;
+  border-radius: 8px;
+  min-width: 150px;
+}
+.menu-item ul {
+  list-style: none;
+  padding: 0;
+  margin: 10px 0 0 0;
+}
+.menu-item li {
   font-size: 0.9em;
+  margin: 4px 0;
 }
